--- a/eaglercraftx/gateway/gateway.conf
+++ b/eaglercraftx/gateway/gateway.conf
@@ -1,1 +1,9 @@
-poopoocraft.repl.co
+{
+  "servers": [
+    {
+      "name": "PoopooCraft",
+      "address": "wss://poo-poo-craft.onrender.com",
+      "hideAddress": false
+    }
+  ]
+}
