--- a/bungee/config.yml
+++ b/bungee/config.yml
@@ -5,34 +5,34 @@ groups: {}
 servers:
   lobby:
     motd: '&1Just another Waterfall - Forced Host'
-    address: 0.0.0.0:25565
+    address: 127.0.0.1:25565
     restricted: false
 remote_ping_cache: -1
 connection_throttle_limit: 3
 enforce_secure_profile: false
 online_mode: false
 listeners:
-- query_port: 25577
-  motd: '&1Poo Poo Craft!'
-  tab_list: GLOBAL_PING
-  query_enabled: false
-  proxy_protocol: false
-  forced_hosts:
-    pvp.md-5.net: pvp
-  ping_passthrough: false
-  priorities:
-  - lobby
-  bind_local_address: false
-  host: 0.0.0.0:25577
-  max_players: 1
-  tab_size: 60
-  force_default_server: true
+  - query_port: 25577
+    motd: '&1Poo Poo Craft!'
+    tab_list: GLOBAL_PING
+    query_enabled: false
+    proxy_protocol: false
+    forced_hosts:
+      pvp.md-5.net: pvp
+    ping_passthrough: false
+    priorities:
+      - lobby
+    bind_local_address: false
+    host: 0.0.0.0:25577  # ✅ This MUST match your Render PORT env variable
+    max_players: 1
+    tab_size: 60
+    force_default_server: true
 server_connect_timeout: 5000
 player_limit: -1
 max_packets_per_second: 4096
 ip_forward: true
 disabled_commands:
-- disabledcommandhere
+  - disabledcommandhere
 log_pings: true
 max_packets_data_per_second: 33554432
 forge_support: true
@@ -42,12 +42,12 @@ reject_transfers: false
 network_compression_threshold: 256
 permissions:
   default:
-  - bungeecord.command.server
-  - bungeecord.command.list
+    - bungeecord.command.server
+    - bungeecord.command.list
   admin:
-  - bungeecord.command.alert
-  - bungeecord.command.end
-  - bungeecord.command.ip
-  - bungeecord.command.reload
-  - bungeecord.command.kick
+    - bungeecord.command.alert
+    - bungeecord.command.end
+    - bungeecord.command.ip
+    - bungeecord.command.reload
+    - bungeecord.command.kick
 timeout: 30000
